Configurado rotas no frontend e variaveis de ambiente no backend

--- a/applib/src/app/app.component.html
+++ b/applib/src/app/app.component.html
@@ -1,1 +1,10 @@
-<app-forms/>
+<nav class="navBar">
+    <ul class="navList">
+        <li> <button class="navBtn"> <a routerLink="/listaContatos" class="navItem">Lista de Contatos</a>   </button></li>
+        <li><button class="navBtn"><a routerLink="/cadastroContato" class="navItem">Novo Contato</a></button></li>
+    </ul>
+    <div class="logoContainer">
+        <a href="https://github.com/GabrielFer555/Angular-Express" target="_blank"><img src="../assets/img/github-mark-white.svg" alt="" class="logo"></a>
+    </div>
+</nav>
+<router-outlet></router-outlet>
