--- a/applib/src/app/forms/forms.component.html
+++ b/applib/src/app/forms/forms.component.html
@@ -1,4 +1,4 @@
- <section class="container">
+ <section class="mainContent">
    <div>
         <h2 class="title">Cadastro de Contatos</h2>
         <form #f="ngForm" (ngSubmit)="salvar(f.value)" id="formContact">
@@ -38,25 +38,4 @@
             
         </form>
     </div>
-    <div id="listaContatos">
-        <h2 class="title">Lista de Contatos</h2>
-        <table class="table table-stripped m-5">
-            <thead>
-                <tr>
-                    <th>Nome</th>
-                    <th>E-mail</th>
-                    <th>Telefone</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let ct of contatos">
-                    <td>{{ct.nome}}</td>
-                    <td>{{ct.email}}</td>
-                    <td>{{ct.fone}}</td>
-                    <td><button (click)="excluir(ct.id)"`>Excluir</button></td>
-                </tr>
-            </tbody>
-
-        </table>
-    </div>
-</section> 
+ </section>
