--- a/applib/src/app/app.component.css
+++ b/applib/src/app/app.component.css
@@ -1,41 +1,78 @@
+
 .navBar{
+    position: absolute; /* Position them relative to the browser window */
+    transition: 0.5s all ease-in-out;
+    margin-right: 2rem;
+    height: 100vh;
+    width: 5rem; /* Set a specific width */
+    text-decoration: none; /* Remove underline */
+    font-size: 1rem; /* Increase font size */
+    color: white; /* White text color */
+    border-radius: 0 5px 5px 0; /* Rounded corners on the top right and bottom right side */
+    background: #100514;
     z-index: 1;
-    position: fixed;
-    width: 100%;
-    background: black;
     overflow: hidden;
+}
+
+.navBar:hover{    
+    width: 25%;
+    z-index: 1;
+}
+.navBarContent{
     display: flex;
-    justify-content: space-between;
+    flex-flow: column;
+    align-items: end;
+    justify-content: center;
+    width: 100%;
+    height: 60%;
+}
+
+.navBar:hover .navBarContent{
+    justify-content: center;
+    align-items: center;
 }
 
 .navList{
     list-style: none;
     display: flex;
-    flex-flow: row;
-    margin-top: 1rem;
+    justify-content: space-around;
+    flex-flow: column;
     width: auto;
+    height: auto;
 }
 
 .navBtn{
     border: none;
-    margin: 0 1rem 0 2rem ;
-    width: 9rem;
+    margin: 1rem;
+    width: 20rem;
+    height: 3rem;
     background-color: #2f3640;
     border-radius: 0.3rem;
     transition-property: 0.5s ease-in-out;
+    color: #fff;
 }
 .navBtn:hover{
     background: #363c42;
 }
-.navItem{
-    text-decoration: none;
-    color: #000;
-    color: #fff;
-}
 .logoContainer{
-    margin-right: 2rem;
+    width: 100%;
+    height: auto;
 }
+
+.navBar:hover .logoContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 0.5rem;
+}
+
 .logo{
     width: 3rem;
     height: 3rem;
+    transition: 0.5s ease-in-out;
+}
+
+.navBar:hover .logoContainer .logo{
+    width: 8rem;
+    height: 8rem;
 }
