--- a/applib/src/app/forms/forms.component.html
+++ b/applib/src/app/forms/forms.component.html
@@ -1,18 +1,18 @@
  <section class="mainContent">
    <div>
         <h2 class="title">Cadastro de Contatos</h2>
-        <form #f="ngForm" (ngSubmit)="salvar(f.value)" id="formContact">
+        <form [formGroup]="formFields" (ngSubmit)="salvar()" id="formContact">
             <div class="row m-5 p-0 d-flex align-items-center">
             <div class="col-sm-6">
                 <div class="form-group">
                     <label for="nome">Nome do Contato:</label>
-                    <input type="text" placeholder="Nome..." name="nome" ngModel class="form-control"  autocomplete="off">
+                    <input type="text" placeholder="Nome..." name="nome" formControlName="name" class="form-control"  autocomplete="off">
                 </div>
             </div>
             <div class="col-sm-6">
                 <div class="form-group">
                     <label for="email">Email: </label>
-                    <input type="email" name="email" id="emailInput" placeholder="Insira seu Email..." ngModel
+                    <input type="email" name="email" id="emailInput" formGroupName="email" placeholder="Insira seu Email..." 
                         class="form-control" autocomplete="off">
                 </div>
             </div>
@@ -21,14 +21,14 @@
             <div class="col-sm-6">
                 <div class="form-group">
                     <label for="fone">Telefone:</label>
-                    <input class="form-control" type="text" name="fone" id="foneInput" placeholder="Insira o Telefone" ngModel  autocomplete="off" prefix="+(55) " mask="(00) 0 0000-0000">
+                    <input class="form-control" type="text" name="fone" id="foneInput" formControlName="fone" placeholder="Insira o Telefone"  autocomplete="off" prefix="+(55) " mask="(00) 0 0000-0000">
                 </div>
             </div>
             <div class="myBtnGroup">
-                <button class="myBtn saveBtn">
+                <button [disabled]="!formFields.valid" class="myBtn saveBtn" type="submit">
                     Save
                 </button>
-                <button class="myBtn cancelBtn">
+                <button class="myBtn cancelBtn" type="reset">
                     Cancelar
                 </button>
             </div>
