--- a/applib/src/app/contact-list/contact-list.component.html
+++ b/applib/src/app/contact-list/contact-list.component.html
@@ -1,24 +1,35 @@
 <section class="mainContent">
-<div id="listaContatos">
-    <h2 class="title">Lista de Contatos</h2>
-    <table class="table table-stripped m-5">
-        <thead>
-            <tr>
-                <th>Nome</th>
-                <th>E-mail</th>
-                <th>Telefone</th>
-                <th>#</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let ct of contatos">
-                <td>{{ct.nome}}</td>
-                <td>{{ct.email}}</td>
-                <td>{{ct.fone}}</td>
-                <td><button class="excludeBtn" (click)="excluir(ct.id)">Excluir</button></td>
-            </tr>
-        </tbody>
+    <div id="listaContatos">
+        <h2 class="title">Lista de Contatos</h2>
+        <table class="table table-stripped m-5">
+            <thead>
+                <tr>
+                    <th>Nome</th>
+                    <th>E-mail</th>
+                    <th>Telefone</th>
+                    <th>#</th>
+                    <th>#</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let ct of contatos">
+                    <td>{{ct.nome}}</td>
+                    <td>{{ct.email}}</td>
+                    <td>{{ct.fone}}</td>
+                    <td><button class="btnList cancelBtn" (click)="excluir(ct.id)">
+                            <span class="material-symbols-rounded">
+                                delete
+                            </span>
+                        </button>
+                    </td>
+                    <td><button class="btnList editBtn" (click)="excluir(ct.id)">
+                            <span class="material-symbols-rounded gearSimbol">
+                                settings
+                            </span>
+                        </button></td>
+                </tr>
+            </tbody>
 
-    </table>
-</div>
-</section> 
+        </table>
+    </div>
+</section>
