--- a/applib/src/app/forms/forms.component.html
+++ b/applib/src/app/forms/forms.component.html
@@ -12,7 +12,7 @@
             <div class="col-sm-6">
                 <div class="form-group">
                     <label for="email">Email: </label>
-                    <input type="email" name="email" id="emailInput" formGroupName="email" placeholder="Insira seu Email..." 
+                    <input type="email" name="email" id="emailInput" formControlName="email" placeholder="Insira seu Email..." 
                         class="form-control" autocomplete="off">
                 </div>
             </div>
@@ -28,7 +28,7 @@
                 <button [disabled]="!formFields.valid" class="myBtn saveBtn" type="submit">
                     Save
                 </button>
-                <button class="myBtn cancelBtn" type="reset">
+                <button routerLink="/listaContatos" class="myBtn cancelBtn" type="reset">
                     Cancelar
                 </button>
             </div>
