--- a/applib/src/app/edit-contact/edit-contact.component.html
+++ b/applib/src/app/edit-contact/edit-contact.component.html
@@ -1,1 +1,50 @@
-<p>edit-contact works!</p>
+<section class="mainContent">
+    <div>
+        <h2 class="title">Edição de Contatos</h2>
+        <form [formGroup]="formsEdit" (ngSubmit)="salvar()" id="formContact">
+            <div class="row m-5 p-0 d-flex align-items-center">
+                <div class="col-sm-3">
+                    <div class="form-group">
+                        <label for="id">Id:</label>
+                        <input type="text" [disabled]="true" formControlName="id" class="form-control disabled" id="id">
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        <label for="nome">Nome do Contato:</label>
+                        <input type="text" placeholder="Nome..." name="nome" formControlName="name" class="form-control"
+                            autocomplete="off">
+                    </div>
+                </div>
+            </div>
+            <div class="row d-flex align-items-center m-5">
+                <div class="col-sm-3">
+                    <div class="form-group">
+                        <label for="fone">Telefone:</label>
+                        <input class="form-control" type="text" name="fone" id="foneInput" formControlName="fone"
+                            placeholder="Insira o Telefone" autocomplete="off" prefix="+(55) " mask="(00) 0 0000-0000">
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        <label for="email">Email: </label>
+                        <input type="email" name="email" id="emailInput" formControlName="email"
+                            placeholder="Insira seu Email..." class="form-control" autocomplete="off">
+                    </div>
+                </div>
+                <div class="myBtnGroup">
+                    <button [disabled]="!formsEdit.valid" class="myBtn saveBtn" type="submit">
+                        Save
+                    </button>
+                    <button routerLink="/listaContatos" class="myBtn cancelBtn" type="reset">
+                        Cancelar
+                    </button>
+                </div>
+
+
+            </div>
+        </form>
+    </div>
+
+    
+</section>
