Ajustado form reativo de edição

--- a/applib/src/app/edit-contact/edit-contact.component.html
+++ b/applib/src/app/edit-contact/edit-contact.component.html
@@ -33,7 +33,7 @@
                     </div>
                 </div>
                 <div class="myBtnGroup">
-                    <button [disabled]="!formsEdit.valid" class="myBtn saveBtn" type="submit">
+                    <button [disabled]="!isFormValid" class="myBtn saveBtn" type="submit" (click)="salvarAlteracoes()">
                         Save
                     </button>
                     <button routerLink="/listaContatos" class="myBtn cancelBtn" type="reset">
