Iniciado tela de login

--- a/applib/src/app/app.component.html
+++ b/applib/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navBar">
+<!--<nav class="navBar">
     <div class="logoContainer">
         <a href="https://github.com/GabrielFer555/Angular-Express" target="_blank"><img src="../assets/img/github-mark-white.svg" alt="" class="logo"></a>
     </div>
@@ -10,4 +10,5 @@
         </ul>
     </div>
 </nav>
-<router-outlet/>
+<router-outlet/> -->
+<app-login/>
